--- a/build.gradle
+++ b/build.gradle
@@ -22,7 +22,6 @@ dependencies {
   compile 'org.codehaus.groovy:groovy-all:2.4.8'
   compile 'io.vertx:vertx-web:3.3.2'
   compile 'com.google.guava:guava:19.0'
-  compile 'org.codehaus.groovy.modules.http-builder:http-builder:0.7.1'
   compile 'org.apache.commons:commons-lang3:3.5'
   compile 'org.apache.httpcomponents:httpclient-osgi:4.5.2'
   compile 'org.apache.commons:commons-io:1.3.2'
@@ -33,6 +32,7 @@ dependencies {
   testCompile 'org.apache.commons:commons-io:1.3.2'
   testCompile 'org.apache.httpcomponents:httpclient-osgi:4.5.2'
   testCompile 'com.github.jsonld-java:jsonld-java:0.9.0'
+  testCompile 'io.rest-assured:rest-assured:3.0.3'
 }
 
 defaultTasks 'build', 'generateDescriptors'
