--- a/package.json
+++ b/package.json
@@ -16,13 +16,7 @@
     "url": "https://github.com/folio-org/mod-metadata/issues"
   },
   "homepage": "https://github.com/folio-org/mod-metadata#readme",
-  "dependencies": {
-    "raml2md": "3.*",
-    "raml2html": "3.*"
-  },
   "devDependencies": {
-    "eslint": "^3.12.2",
-    "eslint-plugin-json": "^1.2.0",
-    "eslint-plugin-raml": "^0.2.7"
+    "raml-cop": "^5.0.0"
   }
 }
