--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,30 @@
     <vertx.version>3.3.2</vertx.version>
   </properties>
 
+  <distributionManagement>
+    <repository>
+      <id>folio-nexus</id>
+      <name>FOLIO Release Repository</name>
+      <url>https://repository.folio.org/repository/maven-releases/</url>
+      <uniqueVersion>false</uniqueVersion>
+      <layout>default</layout>
+    </repository>
+    <snapshotRepository>
+      <id>folio-nexus</id>
+      <name>FOLIO Snapshot Repository</name>
+      <uniqueVersion>true</uniqueVersion>
+      <url>https://repository.folio.org/repository/maven-snapshots/</url>
+      <layout>default</layout>
+    </snapshotRepository>
+  </distributionManagement>
+
+  <scm>
+    <url>https://github.com/folio-org/mod-inventory</url>
+    <connection>scm:git:git://github.com:folio-org/mod-inventory.git</connection>
+    <developerConnection>scm:git:git@github.com:folio-org/mod-inventory.git</developerConnection>
+    <tag>HEAD</tag>
+  </scm>
+
   <build>
     <resources>
       <resource>
