--- a/pom.xml
+++ b/pom.xml
@@ -2,8 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
   <artifactId>mod-inventory</artifactId>
   <groupId>org.folio</groupId>
-  <version>6.0.1-SNAPSHOT</version>
-
+  <version>7.0.0-SNAPSHOT</version>
   <licenses>
     <license>
       <name>Apache License 2.0</name>
@@ -155,7 +154,7 @@
               <resources>
                 <resource>
                   <directory>${basedir}/descriptors</directory>
-                  <include>*Descriptor*-template.json</include>
+                  <include>*-template.json</include>
                   <filtering>true</filtering>
                 </resource>
               </resources>
@@ -183,6 +182,14 @@
                 <fileSet>
                   <sourceFile>${project.build.directory}/DeploymentDescriptor-template.json</sourceFile>
                   <destinationFile>${project.build.directory}/DeploymentDescriptor.json</destinationFile>
+                </fileSet>
+                <fileSet>
+                  <sourceFile>${project.build.directory}/Activate-template.json</sourceFile>
+                  <destinationFile>${project.build.directory}/Activate.json</destinationFile>
+                </fileSet>
+                <fileSet>
+                  <sourceFile>${project.build.directory}/Discovery-template.json</sourceFile>
+                  <destinationFile>${project.build.directory}/Discovery.json</destinationFile>
                 </fileSet>
               </fileSets>
             </configuration>
