--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,12 @@
       <version>3.0.3</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>pl.pragmatists</groupId>
+      <artifactId>JUnitParams</artifactId>
+      <version>1.1.1</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <properties>
