--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,11 @@
       <version>1.3.2</version>
     </dependency>
     <dependency>
+      <groupId>org.folio</groupId>
+      <artifactId>folio-isbn-util</artifactId>
+      <version>1.1.0</version>
+    </dependency>
+    <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.12</version>
