--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,1 +1,1 @@
-*  @marcjohnson-kint @kostyantyn-kh @mrdpopov @OleksiiKuzminov @nielserik @Igor-Gorchakov
+*  @marcjohnson-kint @kostyantyn-kh @mrdpopov @craigmcnally @piotr-kalashuk @OleksiiKuzminov @nielserik @Igor-Gorchakov
