--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,11 @@
       <version>1.1.1</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>joda-time</groupId>
+      <artifactId>joda-time</artifactId>
+      <version>2.10.3</version>
+    </dependency>
   </dependencies>
 
   <properties>
