Use Team for codeowners FOLIO-2208

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,1 +1,1 @@
-*  @marcjohnson-kint @kostyantyn-kh @mrdpopov @craigmcnally @piotr-kalashuk @OleksiiKuzminov @nielserik @Igor-Gorchakov
+* @folio-org/inventory-backend-code-owners
