--- a/pom.xml
+++ b/pom.xml
@@ -113,7 +113,7 @@
     <dependency>
       <groupId>org.folio</groupId>
       <artifactId>mod-source-record-storage-client</artifactId>
-      <version>2.6.0-SNAPSHOT</version>
+      <version>2.6.0</version>
       <type>jar</type>
     </dependency>
   </dependencies>
