--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,12 @@
       <artifactId>data-import-processing-core</artifactId>
       <version>1.0.0</version>
     </dependency>
+    <dependency>
+      <groupId>io.vertx</groupId>
+      <artifactId>vertx-unit</artifactId>
+      <version>${vertx.version}</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <properties>
