--- a/pom.xml
+++ b/pom.xml
@@ -60,9 +60,9 @@
       <version>4.5.2</version>
     </dependency>
     <dependency>
-      <groupId>commons-io</groupId>
+      <groupId>org.apache.commons</groupId>
       <artifactId>commons-io</artifactId>
-      <version>2.4</version>
+      <version>1.3.2</version>
     </dependency>
     <dependency>
       <groupId>org.folio</groupId>
@@ -124,7 +124,7 @@
     <dependency>
       <groupId>org.folio</groupId>
       <artifactId>data-import-processing-core</artifactId>
-      <version>2.0.0</version>
+      <version>1.1.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>io.vertx</groupId>
