--- a/pom.xml
+++ b/pom.xml
@@ -162,7 +162,7 @@
     <url>https://github.com/folio-org/mod-inventory</url>
     <connection>scm:git:git://github.com:folio-org/mod-inventory.git</connection>
     <developerConnection>scm:git:git@github.com:folio-org/mod-inventory.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>v14.1.0</tag>
   </scm>
 
   <build>
