--- a/pom.xml
+++ b/pom.xml
@@ -113,7 +113,7 @@
     <dependency>
       <groupId>org.folio</groupId>
       <artifactId>mod-source-record-storage-client</artifactId>
-      <version>3.1.1</version>
+      <version>3.2.0-SNAPSHOT</version>
       <type>jar</type>
     </dependency>
     <dependency>
