MODDICORE-58: MARC-MARC matching for 001 and 999 ff fields 1. mod-source-record-storage dependency bumped up[4].

--- a/pom.xml
+++ b/pom.xml
@@ -138,6 +138,12 @@
       <groupId>org.folio</groupId>
       <artifactId>mod-source-record-storage-client</artifactId>
       <version>4.1.0-SNAPSHOT</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.folio.util</groupId>
+          <artifactId>util</artifactId>
+        </exclusion>
+      </exclusions>
       <type>jar</type>
     </dependency>
     <dependency>
