--- a/pom.xml
+++ b/pom.xml
@@ -143,6 +143,10 @@
           <groupId>org.folio.util</groupId>
           <artifactId>util</artifactId>
         </exclusion>
+        <exclusion>
+          <groupId>org.folio.rest.jaxrs.model.EntityType</groupId>
+          <artifactId>EntityType</artifactId>
+        </exclusion>
       </exclusions>
       <type>jar</type>
     </dependency>
