MODDICORE-58: MARC-MARC matching for 001 and 999 ff fields 1. mod-source-record-storage dependency bumped up[6].

--- a/pom.xml
+++ b/pom.xml
@@ -144,8 +144,8 @@
           <artifactId>util</artifactId>
         </exclusion>
         <exclusion>
-          <groupId>org.folio.rest.jaxrs.model.EntityType</groupId>
-          <artifactId>EntityType</artifactId>
+          <groupId>org.folio.rest.jaxrs.model</groupId>
+          <artifactId>model</artifactId>
         </exclusion>
       </exclusions>
       <type>jar</type>
