--- a/pom.xml
+++ b/pom.xml
@@ -139,6 +139,20 @@
       <artifactId>mod-source-record-storage-client</artifactId>
       <version>4.1.0-SNAPSHOT</version>
       <type>jar</type>
+      <exclusions>
+        <exclusion>
+          <groupId>org.folio</groupId>
+          <artifactId>domain-models-runtime</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.folio</groupId>
+          <artifactId>domain-models-api-interfaces</artifactId>
+        </exclusion>
+        <exclusion>
+          <groupId>org.folio</groupId>
+          <artifactId>mod-source-record-storage-server</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.folio</groupId>
