--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -2,7 +2,7 @@ stages:
 - name: Build
   steps:
   - runScriptConfig:
-      image: grizzlysoftware/maven-non-root:3.6.2-11.0.4-jdk-stretch
+      image: grizzlysoftware/maven-non-root:3.6.2-8u222-jdk-stretch
       shellScript: mvn package -DskipTests
 - name: Build Docker with DIND
   steps:
