MODDINV-336: Instance Statistical code does not import 1. rancher file changed[2].

--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -1,8 +1,13 @@
 stages:
+- name: Clone submodules
+  steps:
+      - runScriptConfig:
+        image: alpine/git
+        shellScript: git submodule update --init --recursive
 - name: Build
   steps:
   - runScriptConfig:
-      image: grizzlysoftware/maven-non-root:3.6.2-8u222-jdk-stretch
+      image: grizzlysoftware/maven-non-root:3.6.2-11.0.4-jdk-stretch
       shellScript: mvn package -DskipTests
 - name: Build Docker with DIND
   steps:
