--- a/pom.xml
+++ b/pom.xml
@@ -137,7 +137,7 @@
     <dependency>
       <groupId>org.folio</groupId>
       <artifactId>mod-source-record-storage-client</artifactId>
-      <version>4.1.0-SNAPSHOT</version>
+      <version>4.1.0</version>
       <type>jar</type>
     </dependency>
     <dependency>
@@ -148,7 +148,7 @@
     <dependency>
       <groupId>org.folio</groupId>
       <artifactId>data-import-processing-core</artifactId>
-      <version>2.2.0-SNAPSHOT</version>
+      <version>2.2.0</version>
     </dependency>
     <dependency>
       <groupId>io.vertx</groupId>
