--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -14,17 +14,17 @@ stages:
   - publishImageConfig:
       dockerfilePath: ./Dockerfile
       buildContext: .
-      tag: docker.dev.folio.org/mod-inventory:folijet-latest
+      tag: docker.dev.folio.org/mod-inventory:folijet-${CICD_EXECUTION_SEQUENCE}
       pushRemote: true
       registry: docker.dev.folio.org
 - name: Deploy
   steps:
   - applyAppConfig:
-      catalogTemplate: p-mf42h:folijet-helmcharts-mod-inventory
+      catalogTemplate: p-gh7sb:folijet-helmcharts-mod-inventory
       version: 0.1.26
       answers:
         image.repository: docker.dev.folio.org/mod-inventory
-        image.tag: folijet-latest
+        image.tag: folijet-${CICD_EXECUTION_SEQUENCE}
       targetNamespace: folijet
       name: mod-inventory
 timeout: 60
