--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,11 @@
       <artifactId>log4j-slf4j-impl</artifactId>
     </dependency>
     <dependency>
+    <groupId>javax.xml</groupId>
+    <artifactId>jaxp-api</artifactId>
+      <version>1.4</version>
+    </dependency>
+    <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
       <version>29.0-jre</version>
