--- a/pom.xml
+++ b/pom.xml
@@ -175,7 +175,7 @@
     <dependency>
       <groupId>org.folio</groupId>
       <artifactId>mod-source-record-storage-client</artifactId>
-      <version>4.2.0-SNAPSHOT</version>
+      <version>5.0.0</version>
       <type>jar</type>
     </dependency>
     <dependency>
