--- a/pom.xml
+++ b/pom.xml
@@ -175,7 +175,7 @@
     <dependency>
       <groupId>org.folio</groupId>
       <artifactId>mod-source-record-storage-client</artifactId>
-      <version>4.2.0-SNAPSHOT</version>
+      <version>5.0.0</version>
       <type>jar</type>
     </dependency>
     <dependency>
@@ -186,7 +186,7 @@
     <dependency>
       <groupId>org.folio</groupId>
       <artifactId>data-import-processing-core</artifactId>
-      <version>2.3.0-SNAPSHOT</version>
+      <version>3.0.0</version>
     </dependency>
     <dependency>
       <groupId>io.vertx</groupId>
