--- a/.rancher-pipeline.yml
+++ b/.rancher-pipeline.yml
@@ -7,7 +7,7 @@ stages:
   - name: Build
     steps:
       - runScriptConfig:
-          image: maven:3-adoptopenjdk-11
+          image: maven:3.6.3-openjdk-11
           shellScript: mvn package -DskipTests
   - name: Build Docker with DIND
     steps:
