--- a/pom.xml
+++ b/pom.xml
@@ -116,7 +116,7 @@
     <dependency>
       <groupId>org.folio</groupId>
       <artifactId>folio-kafka-wrapper</artifactId>
-      <version>2.0.5</version>
+      <version>2.4.0-SNAPSHOT</version>
     </dependency>
 
     <dependency>
