--- a/pom.xml
+++ b/pom.xml
@@ -107,13 +107,11 @@
       <artifactId>kafka-clients</artifactId>
       <version>2.5.0</version>
     </dependency>
-
     <dependency>
       <groupId>org.folio</groupId>
       <artifactId>folio-kafka-wrapper</artifactId>
-      <version>2.3.3</version>
+      <version>2.4.0-SNAPSHOT</version>
     </dependency>
-
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
