MODINV-504 - added 'version' field, renamed 'uuid' field to 'id'

--- a/ramls/samples/authority.sample
+++ b/ramls/samples/authority.sample
@@ -1,5 +1,6 @@
 {
-   "uuid":"5f671674-229a-48e9-804e-d2814cddd321",
+   "id":"5f671674-229a-48e9-804e-d2814cddd321",
+   "_version": 0,
    "personalName":"Twain, Mark, 1835-1910",
    "sftPersonalName":[
       "Tuėĭn, Mark, 1835-1910",
