--- a/pom.xml
+++ b/pom.xml
@@ -181,8 +181,7 @@
     <dependency>
       <groupId>org.folio</groupId>
       <artifactId>mod-source-record-storage-client</artifactId>
-      <version>5.2.0</version>
-      <type>jar</type>
+      <version>5.3.0-SNAPSHOT</version>
       <exclusions>
         <!-- This is provided by JDK >= 9 causing a compile error (Eclipse doesn't suppress this compile error):
              "The package org.xml.sax is accessible from more than one module: <unnamed>, java.xml"
