--- a/pom.xml
+++ b/pom.xml
@@ -423,6 +423,7 @@
             <include>**/storage/external/failure/ExternalStorageFailureSuite.class</include>
             <include>org/folio/inventory/**</include>
           </includes>
+          <testFailureIgnore>true</testFailureIgnore>
         </configuration>
       </plugin>
       <plugin>
