MODINV-555 - Added 'source' property to the authority schema

--- a/ramls/samples/authority.sample
+++ b/ramls/samples/authority.sample
@@ -2,6 +2,7 @@
    "id":"5f671674-229a-48e9-804e-d2814cddd321",
    "_version": 0,
    "personalName":"Twain, Mark, 1835-1910",
+   "source": "MARC",
    "sftPersonalName":[
       "Tuėĭn, Mark, 1835-1910",
       "Tuwayn, Mārk, 1835-1910",
