--- a/ramls/samples/authority.sample
+++ b/ramls/samples/authority.sample
@@ -1,6 +1,7 @@
 {
    "id":"5f671674-229a-48e9-804e-d2814cddd321",
    "_version": 0,
+   "source": "MARC",
    "personalName":"Twain, Mark, 1835-1910",
    "sftPersonalName":[
       "Tuėĭn, Mark, 1835-1910",
