MODINV-603 - Remove Kafka cache by handling Constraint Violation Exceptions for DataImportKafkaHandler (#458)

--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
       <groupId>org.testcontainers</groupId>
       <artifactId>postgresql</artifactId>
       <version>${testcontainers.version}</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>io.vertx</groupId>
