[MODDATAIMP-758]Imrove logging (hide SQL requests)

--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -15,3 +15,7 @@ rootLogger.appenderRef.stdout.ref = STDOUT
 logger.folio_persist.name = org.folio.rest.persist
 logger.folio_persist.level = ERROR
 logger.folio_persist.appenderRef.stdout.ref = STDOUT
+
+logger.kafka.name = org.apache.kafka
+logger.kafka.level = ERROR
+logger.kafka.appenderRef.stdout.ref = STDOUT
