[MODINV-1031] Implement endpoint to update ownership of Holdings (#731)
* [MODINV-1031] Implement endpoint to update ownership of Holdings

* Implement updating ownership of holdings withou updating ownership of underlying items

* transfer along with all the Items attached to a selected Holdings

* Response with error message

* Add description for entityId

* Add logs on failures

* Add logs for debug

* Not set hrid for items and holdings during create

* Fix sonar errors

* Add HoldingsUpdateOwnership to ApiTestSuite

* Fix sonar issues

--- a/pom.xml
+++ b/pom.xml
@@ -445,6 +445,9 @@
                 <path>${basedir}/ramls/holdings-record.json</path>
                 <path>${basedir}/ramls/holdings-records-source.json</path>
                 <path>${basedir}/ramls/mappingMetadataDto.json</path>
+                <path>${basedir}/ramls/holdings_update_ownership.json</path>
+                <path>${basedir}/ramls/items_update_ownership.json</path>
+                <path>${basedir}/ramls/update_ownership_response.json</path>
                 <path>${basedir}/ramls/instance-ingress-event.json</path>
               </sourcePaths>
               <targetPackage>org.folio</targetPackage>
